# cs744-project

./: .gitignore  README.md
loadgen/: Cargo.toml
loadgen/src/: client.rs  lib.rs  main.rs  metrics.rs  utils.rs  workloads.rs
server/: .env  .env.mapping  Cargo.toml  Dockerfile  docker-compose.yaml
server/.sqlx/: query-63d05cb50bbe7d041c8d53db8ae97867ce8acdb5b36f1a107536384f0eeb4435.json  query-9e7a8a17513087d9c496b710de74526e8911e93aff5559bbaf33b9112af6cced.json  query-bd2b07443cccf7414a085b12fbbd67a743a5c035924cc1aa5420c994f852e084.json  query-dbaa7396d2334d1a1237643beffa71d46756d023b7b8d3846c8854eace0ed04d.json  query-f9faecc87372c4a5959ae78ade492e8f9111d3970f067ea683e4754bfa0c726c.json
server/migrations/: 20251028091939_create_kv_table.sql
server/src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  store.rs
server/src/routes/: delete.rs  flush.rs  get.rs  mod.rs  post.rs  stats.rs
server/src/test_utils/: mod.rs  setup_app.rs
