[package]
name = "loadgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
futures = "0.3.31"
hdrhistogram = "7.5.4"
hex = "0.4.3"
parking_lot = "0.12.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thousands = "0.2.0"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
