[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
axum = "0.8.6"
dashmap = "6.1.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
