[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.11.0"
actix-web-validator = "7.0.0"
anyhow = "1.0.100"
dotenvy = "0.15.7"
moka = { version = "0.12.11", features = ["future"] }
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
validator = { version = "0.20.0", features = ["derive"] }
